@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-10-05  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/pa64/aorslsh1_n.asm: New file.
+
 2003-10-04  Kevin Ryde  <kevin@swox.se>
 
 	* tune/freq.c (freq_sysctl_hw_model, freq_sunos_sysinfo,
